[gd_scene load_steps=16 format=3 uid="uid://ch3s4mobpmhby"]

[ext_resource type="Script" uid="uid://3wai6u2l5eqq" path="res://Test Level/Test_level.gd" id="1_6emce"]
[ext_resource type="PackedScene" uid="uid://go0nwkxm05ck" path="res://addons/fsm_template/Player/player.tscn" id="2_1c2mv"]
[ext_resource type="Material" uid="uid://5b8jtaqc8qbb" path="res://Test Level/testmat.material" id="2_f7g2b"]
[ext_resource type="PackedScene" uid="uid://coynvr6waaniq" path="res://Ables/Flashlight/flashlight.tscn" id="3_f7g2b"]
[ext_resource type="PackedScene" uid="uid://ceast7xxpnnit" path="res://Ables/Key/key.tscn" id="4_4ptq8"]
[ext_resource type="PackedScene" uid="uid://do7a3sk5ap5qk" path="res://addons/fsm_template/door.tscn" id="5_sb12i"]
[ext_resource type="PackedScene" uid="uid://d1y5wyjmkk0x" path="res://Enemy/base_enemy.tscn" id="6_gbhdq"]
[ext_resource type="PackedScene" uid="uid://b4va8ehcltmpj" path="res://Dialogue system/dialogue_manager.tscn" id="8_lnbra"]
[ext_resource type="Shader" uid="uid://c628t2p1addle" path="res://Screen/CRT.gdshader" id="9_6emce"]
[ext_resource type="PackedScene" uid="uid://c2ckyb5vl1bwt" path="res://Ables/Pills/pills.tscn" id="10_lowby"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1c2mv"]
sky_top_color = Color(0.0284819, 0.0425262, 0.0634626, 1)
sky_horizon_color = Color(0.210156, 0.216195, 0.225729, 1)
sky_curve = 0.080383
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_curve = 0.00277392
ground_energy_multiplier = 0.74
sun_angle_max = 0.0
sun_curve = 0.0832177

[sub_resource type="Sky" id="Sky_lowby"]
sky_material = SubResource("ProceduralSkyMaterial_1c2mv")

[sub_resource type="Environment" id="Environment_4ptq8"]
background_mode = 2
sky = SubResource("Sky_lowby")
ambient_light_source = 3
tonemap_mode = 3
sdfgi_enabled = true
glow_enabled = true
fog_enabled = true
volumetric_fog_enabled = true
volumetric_fog_albedo = Color(0.525894, 0.525894, 0.525894, 1)
volumetric_fog_emission = Color(0.176471, 0.0901961, 0.0627451, 1)
volumetric_fog_emission_energy = 0.1
volumetric_fog_length = 128.0
adjustment_enabled = true

[sub_resource type="FogMaterial" id="FogMaterial_sb12i"]
density = 0.7634
height_falloff = 0.158259
edge_fade = 0.107177

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lnbra"]
shader = ExtResource("9_6emce")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 2.754
shader_parameter/distort_intensity = 0.07
shader_parameter/noise_opacity = 0.529
shader_parameter/noise_speed = 5.29
shader_parameter/aberration = 0.00500005
shader_parameter/brightness = 1.615
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.239
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="Test Level" type="Node3D"]
script = ExtResource("1_6emce")

[node name="DialogueManager" parent="." instance=ExtResource("8_lnbra")]

[node name="DialoguePosition" type="Marker2D" parent="."]
position = Vector2(556, 508)

[node name="NextLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.378
anchor_top = 0.784
anchor_right = 0.622
anchor_bottom = 1.0
offset_left = -0.456024
offset_top = -0.0320129
offset_right = 0.455933
grow_horizontal = 2
grow_vertical = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4ptq8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
visible = false
shadow_enabled = true
sky_mode = 1

[node name="Player" parent="." node_paths=PackedStringArray("monster") instance=ExtResource("2_1c2mv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.59236, 0)
monster = NodePath("../Base Enemy")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.80682, 15.8436)
fov = 33.2

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
use_collision = true
collision_layer = 5
collision_mask = 5

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
use_collision = true
size = Vector3(100, 0.3, 100)
material = ExtResource("2_f7g2b")

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
material = ExtResource("2_f7g2b")

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
size = Vector3(50, 10, 50)
material = ExtResource("2_f7g2b")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.730307, 0)
operation = 2
size = Vector3(40, 10, 40)
material = ExtResource("2_f7g2b")

[node name="flashlight" parent="." instance=ExtResource("3_f7g2b")]
transform = Transform3D(2, 0, 0, 0, -2, -1.74846e-07, 0, 1.74846e-07, -2, 3.84152, -4.18403, 0.927648)

[node name="key" parent="." instance=ExtResource("4_4ptq8")]
transform = Transform3D(1, 0, 0, 0, 1, -1.06581e-14, 0, 1.06581e-14, 1, 3.10406, -4.2091, 1.1443)

[node name="Door" parent="." instance=ExtResource("5_sb12i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.45488, -4.26969, -4.7182)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.65563, 0)
light_color = Color(0.351576, 0.1876, 0.0902795, 1)
light_energy = 12.169
light_indirect_energy = 5.0
shadow_enabled = true
omni_range = 22.686

[node name="FogVolume" type="FogVolume" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.59847, -3.48366, -2.24239)
size = Vector3(20, 2, 20)
material = SubResource("FogMaterial_sb12i")

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.6018, 0, 2.04185)
size = Vector3(20, 20, 24.0837)
box_projection = true
interior = true
enable_shadows = true

[node name="ReflectionProbe2" type="ReflectionProbe" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.3982, 0, -4.43941)
size = Vector3(20, 20, 25.1211)
box_projection = true
interior = true
enable_shadows = true

[node name="Base Enemy" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_gbhdq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, -4.25346, 5.33684)
player = NodePath("../Player")

[node name="CRT_Shader" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_lnbra")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pills" parent="." instance=ExtResource("10_lowby")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.41165, -4.13469, -2.42908)

[connection signal="finished" from="DialogueManager" to="." method="on_DialogueManager_finished"]
[connection signal="message_completed" from="DialogueManager" to="." method="on_DialogueManager_message_completed"]
[connection signal="message_request" from="DialogueManager" to="." method="on_DialogueManager_message_requested"]
